--- a/main.css
+++ b/main.css
@@ -2,121 +2,150 @@ h1 {
 text-decoration: underline;
 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-style:italic;
-color: #FFFFFF;
-}
+color: #FFFFFF;}
+
 h2 {
 text-align: center;
 font-size: 20px;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 color: #9d3a51;
-font-weight: bold;
-}
+font-weight: bold;}
+
 .me {
-    position: fixed;
-    float: left;
-}
+    position: relative;
+    float: left;}
+
 h2, p {
     margin-left: 820px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+
 p {
-    color: #FFFFFF;
-}
+    color: #FFFFFF;}
+
 h3 {
     margin-left: 820px;
     font-size: 20px;
     text-align: center;
     color: #9d3a51;
     font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+
 body {
-    background-color: #000000;
-}
+    background-color: #000000;}
+
 h4 {
     margin-left: 820px;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
-    color:#9d3a51; 
-}
+    color:#9d3a51; }
+
 h5{
     margin-left: 820px;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
-    color:#9d3a51
-}
+    color:#9d3a51}
+
+@media screen and (max-width:1000px){
+    h2, h3, h4, h5 {    margin-left: 10px; }
+        p{margin-left: 10px;
+            font-size: 20px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            text-align: center;
+        color:#FFFFFF,}
+        .me{position:relative;
+            width: 100%;
+            height: auto;}}
+
 .container {
     display: flex;
+    flex-direction: column;
 width: 100vw;
 height: 30vh;
 flex-wrap: wrap;
-justify-content: space-evenly;
+justify-content:flex-start;}
+ 
 
-
-}
 .text-1 {
    background-color: #FFFFFF;
-   color: #9d3a51;
    border-radius: 10px;
+   color: #9d3a51;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 25px;
-   width: 300px; 
+   width: 320px; 
    text-align: center;
-   align-self:center;
-   
-}
+   align-self:center;}
+
 .text-2 {
 background-color: #FFFFFF;
 border-radius: 10px;
 color:#9d3a51;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 25px;
-width: 300px;
+width: 320px;
 align-self: center;
-text-align:center;
-}
+text-align:center;}
+
 .text-3{
     background-color: #FFFFFF ;
     color:#9d3a51;
     border-radius: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 25px;
-    width: 300px;
+    width: 320px;
     align-self: center;
-    text-align: center;
-}
-a{ 
-    color:#9d3a51;
-}
-.text-4 {
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    color:#9d3a51;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-       font-size: 25px;
-    width: 300px;
-    align-self: center;
-    text-align:center;
-    }
-.text-5 {
-background-color: #FFFFFF;
-border-radius: 10px;
-color:#9d3a51;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   font-size: 25px;
-width: 300px;
-align-self: center;
-text-align:center;
-}
-.text-6 {
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    color:#9d3a51;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-       font-size: 25px;
-    width: 300px;
-    align-self: center;
-    text-align:center;
-    }
+    text-align: center;}
+
+a{  color:#9d3a51;
+font-size: 20px;
+margin-right: 20px;}
+
+@media screen and (max-width:1050px) {
+    .container{    
+        flex-direction: row;
+        gap: 2rem;
+        align-items: center;
+        justify-content:space-evenly;}}
+
+
+@media screen and (max-width:750px){
+    .container{    
+        flex-direction: row;
+        gap: 2rem;
+        align-items: center;
+        justify-content:space-evenly;}}
+    
+@media screen and (max-width:320px){
+    .container{    
+        flex-direction: row;
+        gap: 2rem;
+        align-items: center;
+        justify-content:space-evenly;
+        width: 300px;}}   
+    
+.drawings{
+display: flex;
+flex-direction: column;
+width: 100vw;
+height: 30vh;
+flex-wrap: wrap;
+justify-content:flex-start;}  
+
+@media screen and (max-width:2000px) {
+    .drawings{    
+        flex-direction: row;
+        gap: 2rem;
+        margin: 50px;
+        align-items: center;
+        justify-content:space-evenly;}}   
+      
+@media screen and (max-width:1300px) {
+    .drawings{    
+        flex-direction: row;
+        gap: 2rem;
+        padding: right 50%;
+        margin-left: 150px;
+        align-items: center;
+        justify-content:space-evenly;}}           
+   
