--- a/main.css
+++ b/main.css
@@ -48,8 +48,9 @@ h5{
     color:#9d3a51}
 
 @media screen and (max-width:1000px){
-    h2, h3, h4, h5 {    margin-left: 10px; }
-        p{margin-left: 10px;
+    h2, h3, h4, h5 {    margin-left: 5px; }
+        p{margin-left: 5px;
+            margin-right: 5px;
             font-size: 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             text-align: center;
@@ -149,3 +150,7 @@ justify-content:flex-start;}
         align-items: center;
         justify-content:space-evenly;}}           
    
+@media screen and (max-width:1000px) {
+.uzumaki{position:relative;
+    width: 100%;
+    height: auto;}}
